# bringg_test

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
src/: main.py
src/carriers/: base_api.py  carrier.py  carrier_api.py  handler.py
src/carriers/fedex/: __init__.py  adapter.py  api.py  fedex.py  fedex_mock.xml  models.py  schemas.py
src/routers/: track.py
src/schemas/: track.py
src/templates/: index.html
src/track/: router.py
templates/: index.html
tests/fedex/: conftest.py  successfully_response.json  test_fedex_schemas.py
