[project]
name = "bringg_test"
version = "0.1.0"
description = "Test task "
authors = [
    {name = "Mykyta Zemtsov", email = "zemtsovnikig@gmail.com"},
]
dependencies = [
    "fastapi[standard]==0.112.0",
    "uvicorn[standart]",
    "requests",
    "pydantic-xml",
    "jinja2",
    "pytest>=8.3.3",
    "pydantic>=2.9.2",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

# PRE-COMMIT

[tool.black]
line-length = 120
target-version = ["py311"]
skip-string-normalization = true

[tool.ruff]
fix = true
line-length = 120
show-fixes = true
target-version = "py311"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select =  [
    "ARG", "B", "BLE", "C4", "D", "E", "ERA", "F", "I", "NPY", "PD", "PIE",
    "PL", "PT", "PTH", "PYI", "Q", "RET", "RUF", "SIM", "SLF", "T20", "UP"
]
ignore = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in __init__
    "I001", # Conflicting with isort
]
ignore-init-module-imports = true

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.isort]
line_length = 120
profile = "black"

[tool.pdm]
distribution = false
